--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
         "karma-requirejs": "~0.2.1"
     },
     "scripts": {
-        "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
+        "test": "karma start --single-run"
     }
 }
