--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "karma-coverage": "^0.2.4",
     "karma-jasmine": "~0.2.0",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.1"
+    "karma-requirejs": "~0.2.1",
+    "karma-sauce-launcher": "^0.2.10"
   },
   "scripts": {
     "test": "karma start --single-run"
